fix: Resolve layout issues and styles in HomePage and Menu components

--- a/src/components/HomePage/HomePage.module.scss
+++ b/src/components/HomePage/HomePage.module.scss
@@ -36,7 +36,7 @@
 }
 
 .menu {
-  // margin-left: -5vw;
+  margin-left: -2vw;
 }
 
 @media screen and (max-width: $laptop-width) {
